# hobbycad

./: .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  dev_environment_setup.txt  user_manual.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: dco.yml  linux-appimage.yml  linux-arch.yml  linux-build.yml  linux-deb.yml  linux-flatpak.yml  linux-rpm.yml  macos-build-x64.yml  macos-build.yml  macos-homebrew-x64.yml  macos-homebrew.yml  macos-universal.yml  windows-build-msvc-arm64.yml  windows-build-msvc.yml  windows-build-msys2.yml  windows-build.yml  windows-inno.yml  windows-msi.yml
cmake/: GenerateIcons.cmake  README.txt
debian/: changelog  control  copyright  hobbycad.install  menu  rules
devtest/: CMakeLists.txt  README.txt  depcheck.cpp
docs/: cad_library_recommendations.txt  cad_use_case_document.txt  changelog.txt  cli_commands.txt  coding_standards.txt  dev_environment_setup.txt  gui_reference.txt  libhobbycad_api.txt  project_definition.txt  security_risks.txt  theming.txt
packaging/flatpak/: org.hobbycad.HobbyCAD.yml
resources/: hobbycad.desktop
resources/icons/: hobbycad.xpm
resources/macos/: Info.plist.in
scripts/: README.txt
src/hobbycad/: CMakeLists.txt  main.cpp
src/hobbycad/cli/: cliengine.cpp  cliengine.h  clihistory.cpp  clihistory.h  climode.cpp  climode.h  terminalinput.cpp  terminalinput.h
src/hobbycad/gui/: aboutdialog.cpp  aboutdialog.h  backgroundcalibrationdialog.cpp  backgroundcalibrationdialog.h  backgroundimagedialog.cpp  backgroundimagedialog.h  bindingeditrow.cpp  bindingeditrow.h  bindingsdialog.cpp  bindingsdialog.h  changelogpanel.cpp  changelogpanel.h  clipanel.cpp  clipanel.h  constructionplanedialog.cpp  constructionplanedialog.h  extrudedialog.cpp  extrudedialog.h  formuladialog.cpp  formuladialog.h  formulaedit.cpp  formulaedit.h  formulafield.cpp  formulafield.h  mainwindow.cpp  mainwindow.h  modeltoolbar.cpp  modeltoolbar.h  parametersdialog.cpp  parametersdialog.h  preferencesdialog.cpp  preferencesdialog.h  projectbrowserwidget.cpp  projectbrowserwidget.h  revolvedialog.cpp  revolvedialog.h  sketchactionbar.cpp  sketchactionbar.h  sketchcanvas.cpp  sketchcanvas.h  (+21 more)
src/hobbycad/gui/full/: aiscanvas2d.cpp  aiscanvas2d.h  aisgrid.cpp  aisgrid.h  aissketchplane.cpp  aissketchplane.h  fullmodewindow.cpp  fullmodewindow.h  navcontrols.h  navhomebutton.cpp  navhomebutton.h  navorbitring.cpp  navorbitring.h  scalebarwidget.cpp  scalebarwidget.h  viewportwidget.cpp  viewportwidget.h
src/hobbycad/gui/reduced/: diagnosticdialog.cpp  diagnosticdialog.h  reducedmodewindow.cpp  reducedmodewindow.h  reducedviewport.cpp  reducedviewport.h
src/hobbycad/resources/: hobbycad.qrc
src/hobbycad/resources/themes/: darkmode.qss  default.qss
src/hobbymesh/: README.txt
src/libhobbycad/: CMakeLists.txt  brep_io.cpp  core.cpp  crashhandler.cpp  document.cpp  image_buffer.cpp  obj_io.cpp  opengl_info.cpp  parameters.cpp  project.cpp  step_io.cpp  stl_io.cpp
src/libhobbycad/brep/: operations.cpp
src/libhobbycad/geometry/: algorithms.cpp  intersections.cpp  types.cpp  utils.cpp
src/libhobbycad/hobbycad/: base64.h  brep_io.h  core.h  crashhandler.h  document.h  format.h  image_buffer.h  obj_io.h  opengl_info.h  parameters.h  project.h  qt_compat.h  step_io.h  stl_io.h  types.h  units.h
src/libhobbycad/hobbycad/brep/: operations.h
src/libhobbycad/hobbycad/geometry/: algorithms.h  intersections.h  types.h  utils.h
src/libhobbycad/hobbycad/sketch/: background.h  constraint.h  decomposition.h  entity.h  export.h  group.h  operations.h  parsing.h  patterns.h  profiles.h  queries.h  snap.h  solver.h  undo.h
src/libhobbycad/sketch/: background.cpp  constraint.cpp  decomposition.cpp  entity.cpp  export.cpp  group.cpp  operations.cpp  parsing.cpp  patterns.cpp  profiles.cpp  queries.cpp  snap.cpp  solver.cpp  undo.cpp
src/libhobbymesh/: README.txt
src/plugins/: README.txt
tests/: README.txt
themes/: darkmode.qss  sample.qss
tools/: README.txt
tools/linux/: README.txt  build-appimage.sh  build-deb.sh  build-dev.sh
tools/macos/: README.txt  build-dev.sh  setup-env.csh  setup-env.sh
tools/windows/: README.txt  build-dev.bat  setup-env.ps1
translations/: hobbycad_en.ts  sample.ts
vcpkg-custom-triplets/: arm64-osx-static.cmake  arm64-toolchain.cmake  arm64-windows-static-md.cmake  arm64-windows-toolchain.cmake  arm64-windows.cmake  x64-osx-static.cmake  x64-windows-static-md.cmake
vcpkg-overlay-ports/lib3mf/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/libslvs/: 0001-handle-missing-git-directory.patch  portfile.cmake  usage  vcpkg.json
vcpkg-overlay-ports/meshfix/: build-shared-library-cross-platform.patch  portfile.cmake  vcpkg.json
vcpkg-overlay-ports/opencascade/: fix-msvc-unsigned-char.patch  portfile.cmake  usage  vcpkg.json
vcpkg-overlay-ports/openmesh/: portfile.cmake  vcpkg.json
vcpkg-toolchains/: arm64-windows.cmake
